# ai_sdlc

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL.md  README.md  blog-announcing-gvm.html  graphify-integration.md  methodology-changelog.md  pipeline.md  plugin.yaml  principles.md  pyproject.toml  tutorial.md
.claude/: settings.local.json
agents/: AUTHORING.md  critic-calibrate.md  critique-review.md  critique.md  diagnose-narrator.md  field-recon.md
graphify-out/: CODE_REPORT.md  graph.json
skills/adopt/: SKILL.md
skills/archive/: SKILL.md
skills/build-slice/: SKILL.md
skills/commit-slice/: SKILL.md
skills/critic-calibrate/: SKILL.md
skills/critique/: SKILL.md
skills/critique-review/: SKILL.md
skills/design-slice/: SKILL.md
skills/diagnose/: SKILL.md  assemble.py  write_pass.py
skills/discover/: SKILL.md
skills/drift-check/: SKILL.md
skills/heavy-architect/: SKILL.md
skills/pulse/: SKILL.md
skills/query-design/: SKILL.md
skills/reduce/: SKILL.md
skills/reflect/: SKILL.md
skills/repro/: SKILL.md
skills/risk-spike/: SKILL.md
skills/slice/: SKILL.md
skills/slice-candidates/: SKILL.md  build_backlog.py
skills/status/: SKILL.md
skills/supersede-slice/: SKILL.md
skills/sync/: SKILL.md
skills/triage/: SKILL.md
skills/user-test/: SKILL.md
skills/validate-slice/: SKILL.md
templates/: critique-report.md  milestone.md  mission-brief.md  reflection.md
tests/: README.md  skill_drift_equality.py
tests/methodology/: conftest.py  test_agent_frontmatter.py  test_branch_workflow_audit.py  test_build_checks_audit.py  test_build_checks_integrity.py  test_build_slice_skill.py  test_build_slice_skill_branch_create.py  test_build_slice_skill_drift.py  test_build_slice_skill_step_7c_branch_skip_canonical_shape.py  test_commit_slice_skill_drift.py  test_commit_slice_skill_merge_flag.py  test_commit_slice_skill_push_flag.py  test_commit_slice_skill_sync_after_pr_flag.py  test_critic_calibrate_agent.py  test_critique_agent.py  test_critique_agent_drift.py  (+43 more)
tools/: _stdout.py  branch_workflow_audit.py  build_checks_audit.py  build_checks_integrity.py  critique_agent_drift_audit.py  critique_review_audit.py  critique_review_prerequisite_audit.py  cross_spec_parity_audit.py  exploratory_charter_audit.py  install_audit.py  mock_budget_lint.py  pipeline_chain_audit.py  plugin_manifest_audit.py  risk_register_audit.py  shippability_decoupling_audit.py  shippability_path_audit.py  supersede_audit.py  test_first_audit.py  triage_audit.py  utf8_stdout_audit.py  validate_slice_layers.py  walking_skeleton_audit.py  wiring_matrix_audit.py
tutorial-site/: Hybrid AI SDLC Pipeline.html
(+135 files in other folders)
